--- a/nvd3/templates/content.html
+++ b/nvd3/templates/content.html
@@ -66,7 +66,7 @@
                     {% block pietooltip %}
                     {% endblock pietooltip %}
                 {% else %}
-                    chart.tooltipContent(function(key, y, e, graph) {
+                    chart.tooltip.contentGenerator(function(key, y, e, graph) {
                         var x = String(graph.point.x);
                         var y = String(graph.point.y);
                         {{ chart.tooltip_condition_string }}
@@ -75,7 +75,7 @@
                     });
                 {% endif %}
             {% else %}
-                chart.tooltipContent(function(key, y, e, graph) {
+                chart.tooltip.contentGenerator(function(key, y, e, graph) {
                     var x = d3.time.format("{{ chart.charttooltip_dateformat }}")(new Date(parseInt(graph.point.x)));
                     var y = String(graph.point.y);
                     {{ chart.tooltip_condition_string }}
